--- a/ASPCore.AllThatBTS.Web/appsettings.json
+++ b/ASPCore.AllThatBTS.Web/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=172.31.32.6;port=3306;Uid=root;Pwd=0(@apadm@);Database=btsdb;UseCompression=True;AllowBatch=true;UseUsageAdvisor=True;"
   }
 }
