--- a/ASPCore.AllThatBTS.Web/ASPCore.AllThatBTS.Web.csproj
+++ b/ASPCore.AllThatBTS.Web/ASPCore.AllThatBTS.Web.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
+    <PackageReference Include="MySql.Data" Version="8.0.13" />
+    <PackageReference Include="NPoco" Version="3.9.4" />
   </ItemGroup>
 
   <ItemGroup>
