--- a/ASPCore.AllThatBTS.Web/ASPCore.AllThatBTS.Web.csproj
+++ b/ASPCore.AllThatBTS.Web/ASPCore.AllThatBTS.Web.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" />
     <PackageReference Include="MySql.Data" Version="8.0.13" />
     <PackageReference Include="NPoco" Version="3.9.4" />
   </ItemGroup>
@@ -18,6 +19,8 @@
     <ProjectReference Include="..\ASPCore.AllThatBTS.BizDac\ASPCore.AllThatBTS.BizDac.csproj" />
     <ProjectReference Include="..\ASPCore.AllThatBTS.Model\ASPCore.AllThatBTS.Model.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 
 </Project>
