--- a/ASPCore.AllThatBTS.Web/appsettings.json
+++ b/ASPCore.AllThatBTS.Web/appsettings.json
@@ -4,5 +4,12 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConfigurationManager": {
+    //Real
+    //"ConnectionString": "Server=172.30.77.240;Port=3306;Database=btsdb;Uid=admin;Pwd=0(@apadm@);",
+
+    //Dev
+    "ConnectionString": "Server=127.0.0.1;Port=3306;Database=btsdb;Uid=admin;Pwd=0(@apadm@);"
   }
 }
