--- a/ASPCore.AllThatBTS.BizDac/ASPCore.AllThatBTS.BizDac.csproj
+++ b/ASPCore.AllThatBTS.BizDac/ASPCore.AllThatBTS.BizDac.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DacBase.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
     <PackageReference Include="MySql.Data" Version="8.0.13" />
     <PackageReference Include="NPoco" Version="3.9.4" />
