--- a/ASPCore.AllThatBTS.Web/appsettings.json
+++ b/ASPCore.AllThatBTS.Web/appsettings.json
@@ -6,10 +6,9 @@
     }
   },
   "ConfigurationManager": {
-    //Real
-    //"ConnectionString": "Server=172.30.77.240;Port=3306;Database=btsdb;Uid=admin;Pwd=0(@apadm@);",
-
-    //Dev
+    // 로컬
     "ConnectionString": "Server=127.0.0.1;Port=3306;Database=btsdb;Uid=admin;Pwd=0(@apadm@);"
+    //, 운영
+    //"ConnectionString": "Server=172.30.77.240;Port=3306;Database=btsdb;Uid=admin;Pwd=0(@apadm@);"
   }
 }
